force-app/main/default/objects/SelaProductLineItem__c/SelaProductLineItem__c.object-meta.xml
<CustomObject>
    <label>SELA Product LineItem</label>
    <nameField>
        <displayFormat>SELAProduct{000000}</displayFormat>
        <label>SELA Product LineItem</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>