force-app/main/default/objects/SelaProductLineItem__c/fields/AddOnQuantity__c.field-meta.xml
<CustomField>
    <fullName>AddOnQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Add On Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>