force-app/main/default/objects/SelaProductLineItem__c/fields/AddOnTotalSubscriptionPrice__c.field-meta.xml
<CustomField>
    <fullName>AddOnTotalSubscriptionPrice__c</fullName>
    <label>Add On Total Subscription Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>