force-app/main/default/objects/SelaProductLineItem__c/fields/SELA__c.field-meta.xml
<CustomField>
    <fullName>SELA__c</fullName>
    <label>SELA</label>
    <referenceTo>Sela__c</referenceTo>
    <relationshipLabel>SELA Product</relationshipLabel>
    <relationshipName>SelaProductLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>