force-app/main/default/objects/SelaProductLineItem__c/fields/SELAProduct__c.field-meta.xml
<CustomField>
    <fullName>SELAProduct__c</fullName>
    <label>SELA Product</label>
    <referenceTo>SelaProduct__c</referenceTo>
    <relationshipLabel>SELA Product LineItem</relationshipLabel>
    <relationshipName>SELAProductLineItems</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>