force-app/main/default/objects/SelaProductLineItem__c/fields/TotalListPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalListPrice__c</fullName>
    <label>TotalListPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>