force-app/main/default/objects/SelaProductLineItem__c/fields/TotalSubscriptionPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalSubscriptionPrice__c</fullName>
    <label>Total Subscription Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>